--- a/pre_processing.ipynb
+++ b/pre_processing.ipynb
@@ -1261,71 +1261,119 @@
     "features = {\n",
     "    \"Outcomes\": [\n",
     "        'Type of Birth',\n",
+    "        'Place of Birth',\n",
     "        'Primary Indication for Cesarean Birth',\n",
+    "        'Water Birth',\n",
+    "        'Placenta delivered under water',\n",
     "        \"Infant's Date of Birth\",\n",
     "        \"Infant's Time of Birth (CABC required)\",\n",
     "        'Primary Indication for Emergency PP Transfer',\n",
     "        'Postpartum Complications [Postpartum Hemorrhage]',\n",
+    "        'Postpartum Complications [Maternal Death Postpartum]',\n",
     "        'Primary Indication for Newborn Transfer',\n",
     "        'Pregnancy Outcome',\n",
     "        'Newborn Admission to NICU after Hospital Birth',\n",
-    "        'Was newborn length of stay longer than maternal length of stay?'\n",
+    "        'Was newborn length of stay longer than maternal length of stay?',\n",
+    "        'Length of Maternal Postpartum Stay at Birth Center or Hospital',\n",
+    "        'Newborn procedures in any setting (ACNM required) [Delayed cord clamping (>3 minutes after birth)]',\n",
+    "        'Newborn procedures in any setting (ACNM required) [Skin-to-skin contact]',\n",
+    "        'Newborn procedures in any setting (ACNM required) [Eye prophylaxis]',\n",
+    "        'Newborn procedures in any setting (ACNM required) [Vitamin K]',\n",
+    "        'Newborn procedures in any setting (ACNM required) [Circumcision]',\n",
+    "        'Specify type of Vitamin K'\n",
     "    ],\n",
     "    \"Before Labor\": [\n",
     "        'Planned Place of Birth for Current Pregnancy',\n",
     "        'Planned birth location in third trimester of pregnancy.',\n",
     "        'Antepartum Transfer',\n",
+    "        'Enter date client left your practice (for any reason)',\n",
+    "        'Age',\n",
     "        'Primary Payment Method',\n",
     "        'Years of Education (Total # of Years)',\n",
-    "        'Age',\n",
+    "        \"What is the mother's ethnicity (self-identified)?\",\n",
+    "        'Maternal Race (self-identified)',\n",
+    "        'If Hispanic, specify:',\n",
+    "        'Zip Code',\n",
+    "        'Marital or Partner Status',\n",
     "        'Medical History (Check all that apply) [None]',\n",
-    "        'Medical History (Check all that apply) [Diabetes, Type 1]',\n",
+    "        'Medical History (Check all that apply) [Smoker ]',\n",
+    "        'Medical History (Check all that apply) [Anorexia/Bulimia ]',\n",
+    "        'Medical History (Check all that apply) [Asthma (requiring Rx or in-patient Tx)]',\n",
+    "        'Medical History (Check all that apply) [Chronic Hypertension (requiring Rx or in-patient Tx)]',\n",
+    "        'Medical History (Check all that apply) [Diabetes, Type 1 ]',\n",
+    "        'Medical History (Check all that apply) [Domestic Violence ]',\n",
+    "        'Medical History (Check all that apply) [Heart Disease (Class II-IV)]',\n",
+    "        'If Substance Abuse selected, check all that apply: [Alcohol]',\n",
+    "        'Enter either pregravid weight or weight at initial OB visit if occurs in 1st trimester',\n",
+    "        'Height in inches',\n",
+    "        'BMI',\n",
     "        'Gravidity',\n",
     "        'Parity',\n",
-    "        'Pregnancy History (select all that apply) [None]',\n",
+    "        'If gravidity is greater than 0, specify: [Term]',\n",
+    "        'If gravidity is greater than 0, specify: [Pre-Term (< 37 weeks)]',\n",
     "        'Pregnancy History (select all that apply) [Cesarean Birth(s)]',\n",
+    "        'Pregnancy History (select all that apply) [Congenital Anomalies/Genetic Disease]',\n",
     "        'Weeks of Gestation at Start of Prenatal Care (ACNM required)',\n",
     "        'Estimated Due Date',\n",
+    "        \"Enter today's date\",\n",
     "        'Number of Prenatal Visits in the Birth Center',\n",
+    "        'Prenatal Classes [Birth Center]',\n",
+    "        'Prenatal Classes [Other (Bradley, Hypnobirthing, Lamaze, etc.)]',\n",
+    "        'Prenatal Classes [Breastfeeding Class(es)]',\n",
     "        'Primary Antepartum Care Provider',\n",
-    "        'Prenatal Complications [Abruption]',\n",
-    "        'Prenatal Complications [Gestational Hypertension]',\n",
-    "        'Prenatal Complications [Pre-eclampsia]',\n",
-    "        'Prenatal Complications [Preterm Labor (32 to <37 weeks)]',\n",
-    "        'How is client planning to feed her baby?'\n",
+    "        'Prenatal Complications [GDM A1]',\n",
+    "        'Prenatal Complications [IUFD]',\n",
+    "        'Prenatal Complications [Late Term - 41 weeks 0 days - 41 weeks 6 days]',\n",
+    "        'Prenatal Complications [HELLP Syndrome]',\n",
+    "        'Prenatal Complications [Other]',\n",
+    "        'If infection select: [Bacterial vaginosis]',\n",
+    "        'If infection select: [Gonorrhea]',\n",
+    "        'If infection select: [Other infection (e.g. respiratory, GI, skin, etc)]',\n",
+    "        'How is client planning to feed her baby?',\n",
+    "        'Primary Indication for AP Medical Referral: [Other]'\n",
     "    ],\n",
     "    \"During Labor\": [\n",
     "        'Intrapartum Transfer',\n",
-    "        'Induction of Labor',\n",
-    "        'Primary Indication for Induction of Labor',\n",
-    "        'Pain Relief - Pharmacologic used in any location: (ACNM required) [Epidural analgesia (for labor)]',\n",
+    "        'Date started',\n",
+    "        'Place of First Admission to Care',\n",
+    "        'Primary Indication for Induction of Labor [Other]',\n",
+    "        'Pain Relief - Pharmacologic used in any location: (ACNM required) [General anesthesia]',\n",
     "        'Length of 1st stage of labor (round to nearest hour) (CABC required)',\n",
     "        'Length of the 2nd stage of labor (round to nearest hour) (CABC required)',\n",
     "        'Length of the 3rd stage of labor (round to nearest hour) (CABC required)',\n",
-    "        'Intrapartum Complications [None]',\n",
-    "        'Intrapartum Complications [Shoulder Dystocia]',\n",
-    "        'Intrapartum Complications [Uterine Rupture]',\n",
-    "        'Intrapartum Complications [Cord Prolapse]',\n",
     "        'Time from Rupture of Membranes to Birth',\n",
-    "        'Character of Amniotic Fluid (select all that apply) (CABC required) [Clear]'\n",
+    "        'Character of Amniotic Fluid (select all that apply) (CABC required) [Clear]',\n",
+    "        'Character of Amniotic Fluid (select all that apply) (CABC required) [Foul-Smelling]',\n",
+    "        'Intrapartum Complications [None]',\n",
+    "        'Intrapartum Complications [Pre-eclampsia]',\n",
+    "        'Intrapartum Complications [HELLP Syndrome]',\n",
+    "        'Intrapartum Complications [Severe Pre-eclampsia]',\n",
+    "        'Intrapartum Complications [Preterm Labor and Birth (32 to <37 weeks)]',\n",
+    "        'Did mother receive prophylactic corticosteroids to promote fetal lung maturity?',\n",
+    "        'Postpartum Transfer',\n",
+    "        'Primary Indication for Emergency PP Transfer',\n",
+    "        'Primary Indication for IP Referral (Non-emergency IP transfer) [Other]'\n",
     "    ],\n",
     "    \"Admin\": [\n",
     "        'Medical Record Number (MRN)',\n",
-    "        'Enter date client left your practice (for any reason)',\n",
-    "        'Place of Birth',\n",
-    "        'Place of First Admission to Care',\n",
-    "        'Date started',\n",
     "        'Date last action',\n",
     "        'Client has signed a consent for data usage in research',\n",
     "        'Primary Indication for AP Medical Referral',\n",
     "        'Referral Disposition',\n",
+    "        'Place of First Admission is not the same as Planned Place of Birth in 3rd Trimester. Please explain.',\n",
     "        'Date of First Admission to Care',\n",
     "        'Time of First Admission to Care (CABC required)',\n",
-    "        'Mode of Transport for IP Transfer',\n",
-    "        'Enter time left birth center or home for IP transport to hospital',\n",
     "        'Primary Attendant for Birth',\n",
     "        'Provider Initials (CABC required)',\n",
     "        'Primary Indication for Pre-Admit IP Referral',\n",
+    "        'Primary Indication for IP Referral (Non-emergency IP transfer)',\n",
+    "        'Primary Indication for Emergency IP Transfer',\n",
+    "        'Length of Time from Decision to Transfer to Arrival in Receiving Unit',\n",
+    "        'Length of Time in Hospital Prior to Delivery',\n",
+    "        'Mode of Transport for IP Transfer',\n",
+    "        'Date of IP Transfer',\n",
+    "        'Enter time left birth center or home for IP transport to hospital',\n",
+    "        'Length of 1st stage of labor (round to nearest hour) (CABC required)',\n",
     "        'Specify use of oxytocics [Pitocin after placenta]',\n",
     "        'Length of Maternal Postpartum Stay at Birth Center or Hospital',\n",
     "        'Mode of Transport for Newborn Transfer',\n",
